--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -12,15 +12,18 @@
 
     <modules>
         <module>spicy-chicken-app</module>
+        <module>spicy-chicken-system</module>
         <module>spicy-chicken-core</module>
-        <module>spic-chicken-common</module>
+        <module>spicy-chicken-common</module>
         <module>spicy-chicken-wechat</module>
+        <module>spicy-chicken-generator</module>
     </modules>
 
     <properties>
         <java.version>17</java.version>
         <bytz.app.name>spicy-chicken</bytz.app.name>
         <spicy.chicken.version>1.0.0</spicy.chicken.version>
+        <spicy.chicken.common.version>1.0.0</spicy.chicken.common.version>
     </properties>
 
     <dependencyManagement>
@@ -29,14 +32,14 @@
             <dependency>
                 <groupId>com.spicy.common</groupId>
                 <artifactId>spicy-common-bom</artifactId>
-                <version>${spicy.chicken.version}</version>
+                <version>${spicy.chicken.common.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.spicy.boot</groupId>
-                <artifactId>spicy-chicken-core</artifactId>
+                <artifactId>spicy-chicken-system</artifactId>
                 <version>${spicy.chicken.version}</version>
             </dependency>
 
@@ -69,7 +72,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
         </plugins>
+
     </build>
 
     <repositories>
