--- a/spicy-chicken-app/pom.xml
+++ b/spicy-chicken-app/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
 
     <artifactId>spicy-chicken-app</artifactId>
 
@@ -14,14 +13,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.spicy.starter</groupId>
+            <groupId>com.spicy.common</groupId>
             <artifactId>spicy-common-starter</artifactId>
             <version>1.0.0</version>
         </dependency>
 
         <dependency>
             <groupId>com.spicy.boot</groupId>
-            <artifactId>spicy-chicken-core</artifactId>
+            <artifactId>spicy-chicken-system</artifactId>
         </dependency>
 
         <dependency>
