--- a/spicy-chicken-wechat/pom.xml
+++ b/spicy-chicken-wechat/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -11,5 +11,19 @@
         <version>1.0.0</version>
         <relativePath>../</relativePath>
     </parent>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>com.spicy.common</groupId>
+            <artifactId>spicy-common-data</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.spicy.common</groupId>
+            <artifactId>spicy-common-shared</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
