--- a/spicy-chicken-common/spicy-chicken-bom/pom.xml
+++ b/spicy-chicken-common/spicy-chicken-bom/pom.xml
@@ -23,11 +23,16 @@
         <druid.version>1.2.11</druid.version>
         <jackson.version>2.13.3</jackson.version>
         <mybatis-plus.version>3.5.2</mybatis-plus.version>
+        <fastjson.version>1.2.54</fastjson.version>
+        <chanjar.version>1.3.3</chanjar.version>
         <com.spicy.common.version>1.0.0</com.spicy.common.version>
         <swagger-models.version>2.1.2</swagger-models.version>
         <io-swagger-models.version>1.6.2</io-swagger-models.version>
         <swagger-annotation.version>1.6.2</swagger-annotation.version>
         <swagger-bootstrap-ui.version>1.8.5</swagger-bootstrap-ui.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
+        <redis-template.version>3.0.0-M4</redis-template.version>
+        <weixin-java-map.version>4.4.0</weixin-java-map.version>
         <swagger-springfox-boot-starter.version>3.0.0</swagger-springfox-boot-starter.version>
         <swagger-knife4j-spring-boot-starter.version>3.0.3</swagger-knife4j-spring-boot-starter.version>
     </properties>
@@ -77,6 +82,12 @@
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-annotations</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
             </dependency>
 
             <!-- beautiful swagger -->
@@ -133,6 +144,48 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${redis-template.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.binarywang</groupId>
+                <artifactId>weixin-java-mp</artifactId>
+                <version>${weixin-java-map.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>me.chanjar</groupId>
+                <artifactId>weixin-java-parent</artifactId>
+                <version>${chanjar.version}</version>
+                <type>pom</type>
             </dependency>
 
         </dependencies>
